--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,6 +6,7 @@
           {{ site.title }}
         </a>
       </h1>
+      <img src='{{"/public/images/m31-orbits-sm.png" | absolute_url}}'>
       <p class="lead">{{ site.description }}</p>
     </div>
 
@@ -26,9 +27,9 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+      <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a> -->
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub repo</a>
+      <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
