--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
           {{ site.title }}
         </a>
       </h1>
-      <img src='{{"/public/images/m31-orbits-sm.png" | absolute_url}}'>
+      <img src="{{ site.baseurl }}/public/images/m31-orbits-sm.png">
       <p class="lead">{{ site.description }}</p>
     </div>
 
