--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,8 +6,8 @@
           {{ site.title }}
         </a>
       </h1>
+      <!-- <p class="lead">{{ site.description }}</p> -->
       <img src="{{ site.baseurl }}/public/images/m31-orbits-sm.png">
-      <p class="lead">{{ site.description }}</p>
     </div>
 
     <nav class="sidebar-nav">
